@@ -1,5 +1,11 @@
 2008-10-06  Richard Hult  <richard@imendio.com>
 
+	* src/dh-util.[ch]: (dh_util_build_data_filename): New function to
+	get a filename in devhelp's data directory, works like
+	g_build_filename.
+
+2008-10-06  Richard Hult  <richard@imendio.com>
+
 	* src/dh-assistant.c (assistant_set_link): Break the line after
 	the #define for macros, to make the output narrower.
 
